[gd_scene load_steps=11 format=3 uid="uid://dkkwh55src4ok"]

[ext_resource type="Script" uid="uid://c02qxvms43idk" path="res://addons/halo/scripts/halo.gd" id="1_d3xw1"]
[ext_resource type="Texture2D" uid="uid://bm6wiyrtbqv8g" path="res://addons/halo/assets/ui_0.png" id="2_27p3b"]
[ext_resource type="FontFile" uid="uid://ctxr55gmptx25" path="res://addons/halo/assets/PixelOperator8.ttf" id="3_0yywk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ckini"]
atlas = ExtResource("2_27p3b")
region = Rect2(400, 400, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_18ah5"]
atlas = ExtResource("2_27p3b")
region = Rect2(300, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jlp7"]
atlas = ExtResource("2_27p3b")
region = Rect2(150, 350, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2otp5"]
atlas = ExtResource("2_27p3b")
region = Rect2(150, 400, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0o6s"]
atlas = ExtResource("2_27p3b")
region = Rect2(400, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3xw1"]
atlas = ExtResource("2_27p3b")
region = Rect2(50, 250, 50, 50)

[sub_resource type="Theme" id="Theme_2otp5"]
default_font = ExtResource("3_0yywk")
default_font_size = 8

[node name="Halo" type="Node2D"]
script = ExtResource("1_d3xw1")

[node name="DeleteButton" type="TextureButton" parent="."]
z_index = 128
offset_left = -23.0
offset_top = -22.0
offset_right = 27.0
offset_bottom = 28.0
scale = Vector2(0.25, 0.25)
texture_normal = SubResource("AtlasTexture_ckini")
stretch_mode = 3

[node name="MoveButton" type="TextureButton" parent="."]
z_index = 128
offset_left = 10.0
offset_top = -22.0
offset_right = 60.0
offset_bottom = 28.0
scale = Vector2(0.25, 0.25)
texture_normal = SubResource("AtlasTexture_18ah5")

[node name="MoveVButton" type="TextureButton" parent="."]
z_index = 128
offset_left = 10.0
offset_top = -10.0
offset_right = 60.0
offset_bottom = 40.0
scale = Vector2(0.25, 0.25)
texture_normal = SubResource("AtlasTexture_7jlp7")

[node name="MoveHButton" type="TextureButton" parent="."]
z_index = 128
offset_left = -3.0
offset_top = -23.0
offset_right = 47.0
offset_bottom = 27.0
scale = Vector2(0.25, 0.25)
texture_normal = SubResource("AtlasTexture_2otp5")

[node name="PrintButton" type="TextureButton" parent="."]
z_index = 128
offset_left = -22.0
offset_top = 10.0
offset_right = 28.0
offset_bottom = 60.0
scale = Vector2(0.25, 0.25)
texture_normal = SubResource("AtlasTexture_i0o6s")

[node name="InspectButton" type="TextureButton" parent="."]
z_index = 128
offset_left = -22.0
offset_top = 10.0
offset_right = 28.0
offset_bottom = 60.0
scale = Vector2(0.25, 0.25)
texture_normal = SubResource("AtlasTexture_d3xw1")

[node name="NameTag" type="Label" parent="."]
z_index = 128
offset_left = -12.0
offset_top = 14.0
offset_right = 28.0
offset_bottom = 37.0
theme = SubResource("Theme_2otp5")
text = "Test"

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="button_down" from="MoveButton" to="." method="_on_move_button_button_down"]
[connection signal="button_up" from="MoveButton" to="." method="_on_move_button_button_up"]
[connection signal="button_down" from="MoveVButton" to="." method="_on_move_v_button_button_down"]
[connection signal="button_up" from="MoveVButton" to="." method="_on_move_v_button_button_up"]
[connection signal="button_down" from="MoveHButton" to="." method="_on_move_h_button_button_down"]
[connection signal="button_up" from="MoveHButton" to="." method="_on_move_h_button_button_up"]
[connection signal="pressed" from="PrintButton" to="." method="_on_print_button_pressed"]
[connection signal="pressed" from="InspectButton" to="." method="_on_inspect_button_pressed"]
